# rust-mpris_widget

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: integration_test.rs  output.txt
