[package]
name = "mpris_widget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
ctrlc = "3.2.5"
envmnt = "0.10.4"
signal-hook = "0.3.15"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
